<resources>
    <string name="app_name">Github Users</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="detail_location">Location</string>
    <string name="company">Company</string>
    <string name="detail_company">Company</string>
    <string name="repository">Repository</string>
    <string name="detail_repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="detail_followers">Followers</string>
    <string name="following">Following</string>
    <string name="detail_following">Following</string>
    <string name="avatar">Avatar</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Username</string>
    <string name="user_not_found">User Not Found</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_empty">Favorite Empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>