<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="138dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ToggleButton
            android:id="@+id/button_favorite"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/favorite_setting"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.031"
            tools:text="name" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="username" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_location"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_username"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:text="@string/detail_location" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_company"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_location"
            app:layout_constraintStart_toStartOf="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            tools:text="@string/detail_company" />

        <TextView
            android:id="@+id/textView"
            style="@style/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_repository"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <TextView
            android:id="@+id/tv_repository"
            style="@style/color1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView"
            tools:text="Repository" />

        <TextView
            android:id="@+id/textView2"
            style="@style/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/detail_followers"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_repository"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/color1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/textView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView2"
            tools:text="followers" />

        <TextView
            android:id="@+id/textView3"
            style="@style/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_following"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_followers"
            tools:layout_editor_absoluteX="249dp"
            tools:layout_editor_absoluteY="241dp" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/color1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/textView3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView3"
            tools:text="following" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/textView3"
            app:layout_constraintRight_toRightOf="@id/tv_following"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_following" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>